# Polynom-Solver

./: .gitignore  CMakeLists.txt  main.cpp
include/: polynom.h
src/: polynom.cpp  solver.cpp
